prints pra testar erro